log

Wed 16 Aug 2023 08:35:23 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:19:15: error: format ‘%d’ expects argument of type ‘int *’, but argument 2 has type ‘int’ [-Werror=format=]
   19 |       scanf("%d",arr[size]);
      |              ~^  ~~~~~~~~~
      |               |     |
      |               int * int
exercises.c: At top level:
exercises.c:22:1: error: expected identifier or ‘(’ before ‘}’ token
   22 | }
      | ^
exercises.c:23:1: error: expected identifier or ‘(’ before ‘}’ token
   23 | } {return 0; }
      | ^
exercises.c:23:3: error: expected identifier or ‘(’ before ‘{’ token
   23 | } {return 0; }
      |   ^
exercises.c: In function ‘findMax’:
exercises.c:19:7: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   19 |       scanf("%d",arr[size]);
      |       ^~~~~~~~~~~~~~~~~~~~~
exercises.c:21:5: error: control reaches end of non-void function [-Werror=return-type]
   21 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
bf14427
